fixed a bug causing div clipping detection to misfire

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -463,7 +463,9 @@ main {
   left: 0;
   right: 0;
   bottom: 0;
-  overflow-x: hidden;  
+  overflow-x: hidden;
+  overflow-y: hidden;
+
 
   /* background-color: lightgray; */
 }
@@ -570,7 +572,7 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   flex-wrap: wrap;
   max-width: 8.22rem;
   margin: 0% 6% 0% 6%;
